--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link rel="apple-touch-icon" sizes="180x180" href="img/favicon_io/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="img/favicon_io/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="img/favicon_io/favicon-16x16.png">
+<link rel="icon" type="image/png" href="img/favicon_io/favicon.ico">
+<link rel="icon" type="image/png" href="img/favicon_io/android-chrome-192x192.png"">
+<link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
   <nav class="white" role="navigation">
