adds fixed navbar

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 </head>
 
 <body>
+  <div class="navbar-fixed">
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
       <a id="logo-container" href="img/logos/LHV-Logo-Vert.jpg" class="brand-logo"><img src ="img/logos/LHV-Icon.jpg" width="63" height="63"> </a>
@@ -36,6 +37,7 @@
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
   </nav>
+</div>
 
   <div id="index-banner" class="parallax-container">
     <div class="section no-pad-bot">
@@ -134,13 +136,14 @@
       <div class="container">
         <div class="row center">
           <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+          <a class="waves-effect waves-light btn-large">Book a tour</a>
         </div>
       </div>
     </div>
     <div class="parallax"><img src="img/Z9sZiHTQ.jpeg" alt="Unsplashed background img 3"></div>
   </div>
 
-  <footer class="page-footer yellow darken-1">
+  <footer class="page-footer grey lighten-2>
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
@@ -163,10 +166,10 @@
         <div class="col l3 s12">
           <h5 class="white-text">Connect</h5>
           <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
+            <li><a class="white-text" href="https://www.instagram.com/lionhillsvineyard/"><img src="https://img.icons8.com/ios-filled/50/000000/instagram-new.png"/></a></li>
+            <li><a class="white-text" href="https://www.facebook.com/lionhillsvineyard/"><img src="https://img.icons8.com/ios-filled/50/000000/facebook-new.png"/></a></li>
+            <li><a class="white-text" href="https://www.pinterest.com/lionhillsvineyard/"><img src="https://img.icons8.com/ios-filled/50/000000/pinterest.png"/></a></li>
+      
           </ul>
         </div>
       </div>
